--- a/style.css
+++ b/style.css
@@ -3,3 +3,49 @@
     /* border: 1px solid red; */
 }
 
+body {
+    color: white;
+    background-color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h1 {
+    text-align: center;
+    font-size: 50px;
+}
+
+h2 {
+    text-align: center;
+    font-size: 42px;
+    font-weight: 300;
+}
+
+a {
+    color: aquamarine;
+    text-align: center;
+    font-size: 16px;
+}
+
+p {
+    color: gray;
+    text-align: center;
+    font-size: 21px;
+    font-weight: 300;
+}
+
+video {
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+
+img {
+    display: block;
+    margin: 0 auto;
+}
+
+footer p{
+    color: grey;
+    text-align: right;
+    font-size: 16px;
+}
